--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <p><em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi, I'm Llane Graceza my new friends usually called me lyn, liyane and lane. Actually the right pronounciation of my name
             is liyan, call me Liyan. And I'm &nbsp;currenlty studying BS information Technology. I am a competitive person and I do appriciate
-            energitetic people. I get bored easily and want friends who will keep<br/>&nbsp;  up with me.I feel closer  to the people when I understand
+            energetic people. I get bored easily and want friends who will keep<br/>&nbsp;  up with me.I feel closer  to the people when I understand
             their imperfection.<em> </p>
            
         <hr color="black"/>
