--- a/onlinecvl.html
+++ b/onlinecvl.html
@@ -17,11 +17,11 @@
     </header>
 <p>
 <ul>
-<li> <a href="#about"> I am About link and my href value is #about</a> <br> 
-<li> <a href="#education"> I am Education link and my href value is #education </a> <br>
-<li> <a href="#skills">I am Skills link and my href value is #skills </a> <br>
-<li><a href="#portfolio">I am Porfolio link and my href value is #portfolio </a> <br>
-<li><a href="#contact">I am Contact link and my href value is #contact </a> <br>
+<li> <a href="#about.txt"> I am About link and my href value is #about</a> <br> 
+<li> <a href="#education.txt"> I am Education link and my href value is #education </a> <br>
+<li> <a href="#skills.txt">I am Skills link and my href value is #skills </a> <br>
+<li><a href="#portfolio.txt">I am Porfolio link and my href value is #portfolio </a> <br>
+<li><a href="#contact.txt">I am Contact link and my href value is #contact </a> <br>
 </ul>
 </p>
 
